trustfall_core/test_data/tests/parse_errors/filter_with_tag_string_instead_of_array_with_tag_string.parse-error.ron
Err(FilterExpectsListNotString("=", "%zerovalue", Pos(
  line: 5,
  column: 39,
)))
